# shop_elec

./: .gitignore  readme.md
backend/: Cargo.toml  db.sql  readme.md
backend/public/: index.html
backend/public/src/js/: main.js  main.js.LICENSE.txt
backend/src/: main.rs
backend/src/routes/: admin.rs  auth.rs  cart.rs  categories.rs  contact.rs  mod.rs  orders.rs  products.rs  reviews.rs  upload.rs
backend/src/utils/: email.rs  mod.rs  suid.rs
frontend/: package.json  readme.md  tailwind.config.js  webpack.config.js
frontend/public/: index.html
frontend/src/: index.js  main copy 2.jsx  main copy.jsx  main.jsx  utils.js
frontend/src/access/css/: base.css
frontend/src/access/fonts/fonts_css/: fonts.css
frontend/src/components/: Layout.jsx  UI.jsx
frontend/src/pages/: About.jsx  Admin.jsx  Cart.jsx  Checkout.jsx  Contact.jsx  Home.jsx  Login.jsx  ProductDetail.jsx  ProductList.jsx  Profile.jsx
frontend/src/store/: Provider.jsx  actions.js  constants.js  hooks.jsx  index.js  logger.js  reducer.js
frontend/src/utils/: helpers.js
