[package]
name = "my_rust_module"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21"

axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["fs", "cors"] }
dotenvy = "0.15"
# chrono = "0.4.42"  <-- ĐÃ XÓA DÒNG NÀY VÌ TRÙNG LẶP
regex = "1.12.2"
rust_decimal = { version = "1.33", features = ["serde"] }

# 1. Thêm feature "chrono" vào sqlx
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio", "tls-native-tls", "macros", "chrono", "rust_decimal", "json"] }

# 2. Thêm feature "serde" vào chrono (Giữ dòng này)
chrono = { version = "0.4.42", features = ["serde"] }

# 3. Thêm thư viện time
time = "0.3"

# === THÊM MỚI ===
axum-extra = { version = "0.9", features = ["cookie"] }
jsonwebtoken = "9.2"
bcrypt = "0.15"

# === THÊM MỚI ===
reqwest = { version = "0.11", features = ["json", "blocking"] }

# === Mail ===
lettre = "0.10"
anyhow = "1.0"